@@ -9,6 +9,6 @@ EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b8
 EBUILD mplayer-uau-1.0_rc4_p20101126.ebuild 23645 RMD160 64e49ca062db2b32e82944bda06fb26b6be8c7cb SHA1 274ec552e1652eff2a01f124f74774be2042d8d1 SHA256 9952bbfedab8df63547ab0ca0a0df214fa56015297a8ade25aa53955968578dc
 EBUILD mplayer-uau-1.0_rc4_p20101220.ebuild 23441 RMD160 a098eed6bc656e1e15978aa61f5558a126e5c5f0 SHA1 41491e9796ba2d6b963de169a1ea67b1f2e8cae5 SHA256 fc0c1c31eb208d848891e6eb35847022c13b32350910018a0a8147643e73e669
 EBUILD mplayer-uau-1.0_rc4_p20110126.ebuild 23254 RMD160 db5bedfd5fb51699259668ad4c92dcbd5de8087a SHA1 3c8341d18ed310e976b4661ba50e25a35edff461 SHA256 ef49cc0be1d84eb6a77438956d43123c1c9ac1c12a019a4ed89308a1536eb9b7
-EBUILD mplayer-uau-9999.ebuild 23229 RMD160 9e01ea8ad19e930748cae4874c4dd4b9ebc528cd SHA1 d3a08cada5364d9ac4f2582bd4c8672319c43272 SHA256 32cf80650b793a2c3f652d2b5bfe33629b3322de3f2e28523b9ed1e77f8692a0
-MISC ChangeLog 1774 RMD160 6dd8a9f56f2dbebdf6333ec1360f258cf41d6c04 SHA1 b306358b9aa8422756445767a274f1eb6ac946ed SHA256 85d1d3a3f4333ad5f75f0f8a4993e25859a6ae5a6ad7200341c08e71a4b92cec
+EBUILD mplayer-uau-9999.ebuild 22875 RMD160 555e75cdb3cfeeafcc2da986d3f41946ed5b1639 SHA1 f8be9d9111615eafc5d47659bf1c391bf5a8f22d SHA256 d80500fb9d5ec92399b4c7fa02708e70ae362b5ecd9fd6e6dd6cdb04f65f442f
+MISC ChangeLog 1908 RMD160 7a7226d02552ffdb39cc381bc1dd9736d89baeea SHA1 bc29b03dd33e00dee14d78a8448fa32c4faebb7e SHA256 b9a01b870c2e805bb581205e2d9140cded662bfb703246e47018ab232e616448
 MISC metadata.xml 4739 RMD160 e2f1220571f2fb983fa04408190449b75a346b6b SHA1 eaf3e0b5ff1b9759b6d4e7233b2f57f42e360bb6 SHA256 5c818b4e3898a2d0d5a8b833f3bab6c15bdd121a10b55c6e1a6e9f34f7e514a4
