@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
+  upstream removed vidix, zoran, some docs and internal libfaad2
+
   30 Jan 2011; Nikoli <nikoli@lavabit.com>
   mplayer-uau-1.0_rc4_p20110126.ebuild, mplayer-uau-9999.ebuild:
   sync with portage
